[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"

[project]
name = "cmeel-octomap"
version = "1.9.8.1"
description = "cmeel distribution for OctoMap, An Efficient Probabilistic 3D Mapping Framework Based on Octrees"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-octomap"
repository = "https://github.com/cmake-wheel/cmeel-octomap.git"

[tool.cmeel]
build-number = 3
py3-none = true
source = "octomap/octomap"
