[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for OctoMap, An Efficient Probabilistic 3D Mapping Framework Based on Octrees"
license = "BSD-3-Clause"
name = "cmeel-octomap"
requires-python = ">= 3.7"
version = "1.9.8.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-octomap"
repository = "https://github.com/cmake-wheel/cmeel-octomap.git"

[tool.cmeel]
build-number = 4
py3-none = true
source = "octomap/octomap"

[tool.tomlsort]
all = true
